--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="contents">
-  <h1>Welcome to My First angular hhost on heroku</h1>
- 
+  <h1>Welcome to My Very First Angular App, Hosted on Heroku... and Probably Being Watched by Cats!</h1>
+  
+  <p>Oh, and by the way, Haile, I hope you finally realize that 'loading' doesn't mean 'forever'!</p>
+  <p>Seme, don't worry, I’m sure you’ll understand Angular someday... maybe in the next decade!</p>
 </div>
-
