--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="contents">
   <h1>Welcome to My Very First Angular App, Hosted on Heroku... and Probably Being Watched by Cats!</h1>
   
-  <p>Oh, and by the way, Haile, I hope you finally realize that 'loading' doesn't mean 'forever'!</p>
-  <p>Seme, don't worry, I’m sure you’ll understand Angular someday... maybe in the next decade!</p>
+  <h1 style="color: brown;">Oh, and by the way, <strong>Haile</strong>, I hope you finally realize that 'loading' doesn't mean 'forever'!</h1>
+  <br>
+  <h1 style="color: rgb(42, 165, 58);"><strong>Seme</strong>, don't worry, I’m sure you’ll understand Angular someday... maybe in the next decade!</h1>
 </div>
